// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Folder API (E2E)) > addAllowedTeamToFolder 1`] = `
{
  "allowedTeams": [
    {
      "id": "570b9f4b2a7c0e3b008da6ec",
      "name": "team_X1",
      "organization": "Organization_X",
    },
  ],
  "allowedTeamsCumulative": [
    {
      "id": "570b9f4b2a7c0e3b008da6ec",
      "name": "team_X1",
      "organization": "Organization_X",
    },
  ],
  "id": "570b9f4e4bb848d08880712a",
  "isEditable": true,
  "metadata": [
    {
      "key": "foo",
      "type": "string",
      "value": "bar",
    },
  ],
  "name": "A subfolder!",
}
`;

exports[`Folder API (E2E)) > addAllowedTeamToFolder 2`] = `
{
  "allowedTeams": [
    {
      "id": "570b9f4b2a7c0e3b008da6ec",
      "name": "team_X1",
      "organization": "Organization_X",
    },
  ],
  "allowedTeamsCumulative": [
    {
      "id": "570b9f4b2a7c0e3b008da6ec",
      "name": "team_X1",
      "organization": "Organization_X",
    },
  ],
  "id": "570b9f4e4bb848d08880712a",
  "isEditable": false,
  "metadata": [
    {
      "key": "foo",
      "type": "string",
      "value": "bar",
    },
  ],
  "name": "A subfolder!",
}
`;

exports[`Folder API (E2E)) > createFolder 1`] = `
{
  "allowedTeams": [],
  "allowedTeamsCumulative": [],
  "id": "id",
  "isEditable": true,
  "metadata": [],
  "name": "a newly created folder!",
}
`;

exports[`Folder API (E2E)) > getFolder 1`] = `
{
  "allowedTeams": [],
  "allowedTeamsCumulative": [],
  "id": "570b9f4e4bb848d0885ea917",
  "isEditable": true,
  "metadata": [
    {
      "key": "key",
      "type": "number",
      "value": 10,
    },
  ],
  "name": "Organization_X",
}
`;

exports[`Folder API (E2E)) > getFolderTree 1`] = `
[
  {
    "id": "570b9f4e4bb848d08880712a",
    "isEditable": true,
    "metadata": [],
    "name": "A subfolder!",
    "parent": "570b9f4e4bb848d0885ea917",
  },
  {
    "id": "570b9f4e4bb848d08880712b",
    "isEditable": true,
    "metadata": [],
    "name": "Another subfolder!",
    "parent": "570b9f4e4bb848d0885ea917",
  },
  {
    "id": "570b9f4e4bb848d0885ea917",
    "isEditable": true,
    "metadata": [
      {
        "key": "key",
        "type": "number",
        "value": 10,
      },
    ],
    "name": "Organization_X",
    "parent": null,
  },
]
`;

exports[`Folder API (E2E)) > updateFolder 1`] = `
{
  "allowedTeams": [],
  "allowedTeamsCumulative": [],
  "id": "570b9f4e4bb848d0885ea917",
  "isEditable": true,
  "metadata": [],
  "name": "renamed organization x root folder",
}
`;
